css/main.css
@import "global.css";
@import "background.css";
@import "menu.css";
@import "content.css";
@import "footer.css";


body{
    background-color: black;
}

.main_grid{
    display: grid;
    background-color: black;
    grid-template-columns: 15% repeat(7, 10%) 15%;
    grid-template-rows: 25vh auto 2em 4em;
}

.grid_menu { 
    grid-column:1/10;
    grid-row: 1;
}

.grid_background { 
    grid-column: 1/10;
    grid-row: 2; 
}

.grid_main { 
    grid-column: 2/9;
    grid-row: 2; 
}


.grid_slider_buttons {
    grid-column: 5;
    grid-row: 3;
    display:flex;
    width: 80%;
    justify-content: space-around;
    align-items: center;
    align-self: top;
}

.slider_back_btn{
    object-fit: cover;
    width: 1em;
    height: 1em;
    min-height: 1em;
    padding:1px;
}

.slider_next_btn{
    object-fit: cover;
    width: 1em;
    height: 1em;
    min-height: 1em;
    padding: 1px;
}

.slider_play_pause_btn {
    object-fit: cover;
    width: 1em;
    height: 1em;
    padding: 1px;
}

.slider_play_pause_btn:hover,
.slider_back_btn:hover,
.slider_next_btn:hover {
    border: solid .1px yellow;
    transform: scale(1.1);
}

.grid_footer { 
    grid-column: 1/10;
    grid-row: 4; 
}

@media (max-width: 480px){
    
    .main_grid{
        grid-template-rows: 15vh auto 2em 4em;
    }
    
    .slider_back_btn{
        width: 1.8em;
        height: 1.8em;
    }

    .slider_next_btn{
        width: 1.8em;
        height: 1.8em;
    }

    .slider_play_pause_btn {
        width: 1.8em;
        height: 1.8em;
    }
}

@media (min-width: 480px) and (max-width: 768px){
  
    .main_grid{
        grid-template-rows: 17vh auto 2em 4em;
    }
    
    .slider_back_btn{
        width: 1.7em;
        height: 1.7em;
    }

    .slider_next_btn{
        width: 1.7em;
        height: 1.7em;
    }

    .slider_play_pause_btn {
        width: 1.7em;
        height: 1.7em;
    }
  
}

